--- a/index.html
+++ b/index.html
@@ -135,6 +135,8 @@
     <div class="section one" id="one">
       <label for="studentName">Student Name</label>
       <input type="text" id="studentName">
+      <label for="studentAdn">Admission No</label>
+      <input type="number" maxlength="4" id="studentAdmission">
       <label for="studentClass">Class</label>
       <input type="number" max="10" id="studentClass">
       <div class="next" onclick="prEsident()">
