--- a/index.html
+++ b/index.html
@@ -209,18 +209,18 @@
 
     const candidates = {
       president: [
-        { id: "swalih", name: "Swalih Jinshad", photo: "swalih.jpg" },
-        { id: "harshad", name: "Harshad Vp", photo: "harshad.jpg" },
-        { id: "aflah", name: "Aflah PP", photo: "pp.jpg" }
+        { id: "swalih", name: "Swalih Jinshad Aripra", photo: "swalih.jpg" },
+        { id: "harshad", name: "Harshad Vp Pallipuram", photo: "harshad.jpg" },
+        { id: "aflah", name: "Aflah PP Amayoor", photo: "pp.jpg" }
       ],
       secretary: [
-        { id: "hashimrasheed", name: "Hashim Rasheed", photo: "HASHIM.jpg" },
+        { id: "hashimrasheed", name: "Hashim Rasheed Koppam", photo: "HASHIM.jpg" },
         { id: "mishal", name: "Mishal T", photo: "MISHAL.jpg" },
         { id: "sabithok", name: "Sabith OK", photo: "sabithok.jpg" }
       ],
       treasurer: [
         { id: "ajmal", name: "Ajmal", photo: "ajmal.jpg" },
-        { id: "rinshid", name: "Rinshid", photo: "rinshid.jpg" },
+        { id: "rinshid", name: "Rinshid Nilamboor", photo: "rinshid.jpg" },
         { id: "safwan", name: "Safwan", photo: "safwan.jpg" }
       ]
     };
