--- a/index.html
+++ b/index.html
@@ -215,13 +215,13 @@
       ],
       secretary: [
         { id: "hashimrasheed", name: "Hashim Rasheed Koppam", photo: "HASHIM.jpg" },
-        { id: "mishal", name: "Mishal T", photo: "MISHAL.jpg" },
-        { id: "sabithok", name: "Sabith OK", photo: "sabithok.jpg" }
+        { id: "mishal", name: "Mishal TK", photo: "MISHAL.jpg" },
+        { id: "sabithok", name: "Sabith OK Kaipuram", photo: "sabithok.jpg" }
       ],
       treasurer: [
-        { id: "ajmal", name: "Ajmal", photo: "ajmal.jpg" },
+        { id: "ajmal", name: "Ajmal Kaipiram", photo: "ajmal.jpg" },
         { id: "rinshid", name: "Rinshid Nilamboor", photo: "rinshid.jpg" },
-        { id: "safwan", name: "Safwan", photo: "safwan.jpg" }
+        { id: "safwan", name: "Safwan Cherminiyangad", photo: "safwan.jpg" }
       ]
     };
 
