--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
       treasurer: [
         { id: "ajmal", name: "Ajmal Kaipiram", photo: "ajmal.jpg" },
         { id: "rinshid", name: "Rinshid Nilamboor", photo: "rinshid.jpg" },
-        { id: "safwan", name: "Safwan Cherminiyangad", photo: "safwan.jpg" }
+        { id: "safwan", name: "Safwan Nellikkunn", photo: "safwan.jpg" }
       ]
     };
 
