--- a/index.html
+++ b/index.html
@@ -214,14 +214,14 @@
         { id: "aflah", name: "Aflah PP Amayoor", photo: "pp.jpg" }
       ],
       secretary: [
-        { id: "hashimrasheed", name: "Hashim Rasheed Koppam", photo: "HASHIM.jpg" },
-        { id: "mishal", name: "Mishal TK", photo: "MISHAL.jpg" },
+        { id: "hashimrasheed", name: "Hashim Rasheed Karinganad", photo: "HASHIM.jpg" },
+        { id: "mishal", name: "Mishal TK Vadakkumuri", photo: "MISHAL.jpg" },
         { id: "sabithok", name: "Sabith OK Kaipuram", photo: "sabithok.jpg" }
       ],
       treasurer: [
         { id: "ajmal", name: "Ajmal Kaipiram", photo: "ajmal.jpg" },
         { id: "rinshid", name: "Rinshid Nilamboor", photo: "rinshid.jpg" },
-        { id: "safwan", name: "Safwan Nellikkunn", photo: "safwan.jpg" }
+        { id: "safwan", name: "Safwan Koppan", photo: "safwan.jpg" }
       ]
     };
 
